<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.lugar.AddLugarFragment" >

    <EditText
        android:id="@+id/et_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_estado"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_capital_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_capital"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_poblacion_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_poblacion"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_costas_estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_costas"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_add_estados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_add_estado" />


</LinearLayout>