<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_estados">

    <fragment
        android:id="@+id/nav_estados"
        android:name="com.estados.ui.estados.EstadosFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_estados" >
        <action
            android:id="@+id/action_nav_estados_to_addEstadosFragment"
            app:destination="@id/addEstadosFragment" />
        <action
            android:id="@+id/action_nav_estados_to_updateEstadosFragment"
            app:destination="@id/updateEstadosFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.estados.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.estados.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addEstadosFragment"
        android:name="com.estados.ui.estados.AddEstadosFragment"
        android:label="AddEstadosFragment" >
        <action
            android:id="@+id/action_addEstadosFragment_to_nav_estados"
            app:destination="@id/nav_estados" />
    </fragment>
    <fragment
        android:id="@+id/updateEstadosFragment"
        android:name="com.estados.ui.estados.UpdateEstadosFragment"
        android:label="UpdateEstadosFragment" >
        <action
            android:id="@+id/action_updateEstadosFragment_to_nav_estados"
            app:destination="@id/nav_estados" />
        <argument
            android:name="estado"
            app:argType="com.estados.model.Estados" />
    </fragment>

</navigation>